--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
 	color: #fff;
 }
 
-.btn-green:hover {
+.btn-green:hover:enabled {
 	color: #FFD100 !important;
 } 
 
@@ -54,6 +54,10 @@
 #horizontal-greenbar li {
 	padding: 5px 0;
 	padding-right: 50px; 
+}
+
+#welcome-nav {
+	padding-right: 20px !important;
 }
 
 #horizontal-greenbar a {
