--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.content {
+  min-height: calc(100vh - 202px);
+}
+
 .col-centered {
 	float: none;
 	margin: 0 auto;
@@ -8,6 +12,10 @@
 }
 
 /* CSS Colors */
+.badge {
+	background-color: #fff;
+}
+
 .dark-green {
 	color: #064B27 !important;
 }
@@ -118,9 +126,10 @@
 /* Footer */
 
 .main-footer {
-	position: relative;
-	left: 0;
-	bottom: 0;
+	/*position: relative;*/
+	/*left: 0;*/
+	/*bottom: 0;*/
+	height: 50px;
 	width: 100%;
 	background-color: #064B27;
 	color: #eee;
@@ -147,3 +156,24 @@ td {
 tr:hover {
 	background-color: #FFEC99 !important;
 }
+
+/*SHOPPING CART*/
+
+.btnAddAction{    background-color: #eb9e4f;
+    border: 0;
+    padding: 3px 10px;
+    color: #ffffff;
+    margin-left: 2px;
+    border-radius: 2px;
+}
+/*.cart-item {border-bottom: #79b946 1px dotted;padding: 10px;}
+#product-grid {margin-bottom:30px;}
+.product-item {	float:left;	background: #ffffff;margin:15px 10px;	padding:5px;border:#CCC 1px solid;border-radius:4px;}
+.product-item div{text-align:center;	margin:10px;}
+.product-price {    
+	color: #005dbb;
+    font-weight: 600;
+}
+.product-image {height:100px;background-color:#FFF;}
+.clear-float{clear:both;}
+.demo-input-box{border-radius:2px;border:#CCC 1px solid;padding:2px 1px;}*/
