--- a/admin/main.css
+++ b/admin/main.css
@@ -11,7 +11,7 @@ body {
 }
 
 .header {
-	position: absolute;
+	/*position: absolute;*/
 	width: 100%;
 	z-index: 3;
 	height: 44px;
@@ -20,8 +20,14 @@ body {
 }
 
 .logo img {
-    max-width: 100%;
-    max-height: 120%;
+	max-width: 100%;
+	max-height: 120%;
+	border-bottom: 1px solid #064B27;
+}
+
+.profile img {
+	margin: 0 auto;
+	padding: 10px;
 }
 /* logo in header(mobile version) and side-nav (tablet & desktop) */
 .logo {
@@ -35,6 +41,7 @@ body {
 .side-nav .logo {
 	background-color: #FFF;
 	color: #064B27;
+
 }
 .header .logo {
 	float: left;
@@ -97,7 +104,7 @@ body {
 }
 .side-nav ul li {
 	padding: 16px 16px;
-	border-bottom: 1px solid #3c506a;
+	/*border-bottom: 1px solid #3c506a;*/
 	position: relative;
 }
 .side-nav ul li.active:before {
@@ -129,7 +136,7 @@ body {
 	padding: 40px;
 	margin-top: 0;
 	padding: 0;
-	padding-top: 44px;
+	/*padding-top: 44px;*/
 	height: 100%;
 /*	overflow: scroll;*/
 }
@@ -145,7 +152,7 @@ body {
 @media screen and (min-width: 600px) {
 	.header {
 		background-color: #064B27;
-		z-index: 1;
+		z-index: 3;
 	}
 	.header .logo {
 		display: none;
@@ -184,6 +191,7 @@ body {
 @media screen and (min-width: 800px) {
 	.side-nav {
 		width: 200px;
+		border-right: 1px solid black;
 	}
 	.side-nav ul li span:nth-child(2) {
 		display: inline-block;
