--- a/admin/main.css
+++ b/admin/main.css
@@ -11,7 +11,7 @@ body {
 }
 
 .header {
-	/*position: absolute;*/
+	position: fixed;
 	width: 100%;
 	z-index: 3;
 	height: 44px;
@@ -22,7 +22,7 @@ body {
 .logo img {
 	max-width: 100%;
 	max-height: 120%;
-	border-bottom: 1px solid #064B27;
+/*	border-bottom: 1px solid #064B27;*/
 }
 
 .profile img {
@@ -31,8 +31,8 @@ body {
 }
 /* logo in header(mobile version) and side-nav (tablet & desktop) */
 .logo {
-/*	height: 44px;
-	padding: 10px;*/
+	height: 44px;
+	padding: 10px;
 	font-weight: 700;
 }
 .header .logo {
@@ -88,7 +88,7 @@ body {
 }
 /* side navigation styles */
 .side-nav {
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100vh;
 	background-color: #FFF;
@@ -110,10 +110,10 @@ body {
 .side-nav ul li.active:before {
 	content: '';
 	position: absolute;
-	width: 4px;
+	width: 15px;
 	height: 100%;
 	top: 0;
-	left: 0;
+	right: 0;
 	background-color: #064B27;
 }
 .side-nav ul li a {
@@ -136,7 +136,7 @@ body {
 	padding: 40px;
 	margin-top: 0;
 	padding: 0;
-	/*padding-top: 44px;*/
+	padding-top: 44px;
 	height: 100%;
 /*	overflow: scroll;*/
 }
@@ -145,8 +145,25 @@ body {
 	border-bottom: 1px solid #b8bec9;
 	padding: 17px 20px;
 	font-weight: 700;
-	color: #333;
+	color: #064B27;
 	font-size: 18px;
+}
+
+#stocksTable th {
+	text-align: center;
+}
+
+.stylish-input-group .input-group-addon{
+    background: white !important; 
+}
+.stylish-input-group .form-control{
+	border-right:0; 
+	box-shadow:0 0 0; 
+	border-color:#ccc;
+}
+.stylish-input-group button{
+    border:0;
+    background:transparent;
 }
 /* set element styles to fit tablet and higher(desktop) */
 @media screen and (min-width: 600px) {
@@ -186,12 +203,15 @@ body {
 	.main-content {
 		margin-left: 70px;
 	}
+
+	
 }
 /* set element styles for desktop */
 @media screen and (min-width: 800px) {
 	.side-nav {
 		width: 200px;
 		border-right: 1px solid black;
+/*background-color: red;*/
 	}
 	.side-nav ul li span:nth-child(2) {
 		display: inline-block;
@@ -211,7 +231,14 @@ body {
 	.main-content {
 		margin-left: 200px;
 	}
+
 }
+
+@media screen and (max-width: 800px) {
+.profile {
+		display: none;
+	}
+}	
 
 /* main box container */
 .main {
