--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+h1, h2, h3, h4, h5, h6 {
+ font-family: 'Oswald', sans-serif;
+ color: #064B27;
+}
+
 .vertical-center {
   min-height: 100%; 
   min-height: 100vh;
